@@ -1,3 +1,6 @@
+* Thu Aug 31 2023 Steven Pritchard <steve@sicura.us> - 0.3.0
+- Add AlmaLinux 8 support
+
 * Mon Jul 17 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.2.0
 - Add RockyLinux 8 support
 
